IngressPlay/ngingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
    - host: <Host> # Optional - But we will give a host name
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: someservice.default.svc.cluster.local
                port:
                  number: 80
